# Guider

./: .gitignore  CMakeLists.txt  Guider.cpp  README.md
.github/workflows/: cmake.yml
Wemos_Modules/Bed/: Bed.ino
Wemos_Modules/Chair/: Chair.ino
Wemos_Modules/Column/: Column.ino
Wemos_Modules/Door/: Door.ino
Wemos_Modules/Door_Module/: Door_Module.ino  Example_Module.ino
Wemos_Modules/Example_Module/: AnalogI.cpp  AnalogI.h  Column.ino  DigitalIO.cpp  DigitalIO.h  Example_Module.ino  Example_module.ino
Wemos_Modules/TableLamp/: TableLamp.ino
Wemos_Modules/Wall/: Wall.ino
inc/: Apartment.cpp  Apartment.h  Bed.cpp  Bed.h  BedModule.cpp  BedModule.h  CMakeLists.txt  Chair.cpp  Chair.h  Client.cpp  Client.h  Column.cpp  Column.h  Dashboard.cpp  Dashboard.h  Door.cpp  Door.h  ExampleModule.cpp  ExampleModule.h  Module.cpp  Module.h  ModuleAddresses.h  Server.cpp  Server.h  TableLamp.cpp  TableLamp.h  Timer.cpp  Timer.h  Wall.cpp  Wall.h  Zuil.cpp  Zuil.h  enableModules.h
json_utils/: jsonexample.cpp
src/: CMakeLists.txt  Guider.cpp  ModuleAddresses.h  ModuleAddresses.h.example
tests/: ClientServer_tests.cpp
utilities/: Client.cpp  Client.h  Server.cpp  Server.h
wmos_core/: wmos_core.ino
