add_executable(Guider Guider.cpp)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(Guider PRIVATE Threads::Threads)

target_link_libraries(Guider PUBLIC Server)
target_link_libraries(Guider PUBLIC Client)
target_link_libraries(Guider PUBLIC Module)
target_link_libraries(Guider PUBLIC ExampleModule)
target_link_libraries(Guider PUBLIC Bed)
target_link_libraries(Guider PUBLIC TableLamp)
target_link_libraries(Guider PUBLIC Door)
target_link_libraries(Guider PUBLIC Timer)
target_link_libraries(Guider PUBLIC Wall)
